# SYNAPSE

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agent.py  agent_ui.py  ai_agent.py  cloudbuild.yaml  hardware.py  nexus.py  paper.tex  protocol.py  pyproject.toml  render.yaml  requirements.txt  setup.py  synapse.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
sentinel/: Dockerfile  cloudbuild-sentinel.yaml  requirements.txt  sentinel.py
templates/: index.html
tests/: test_agent_ui_utils.py  test_powerups.py  test_protocol.py  test_recent_fixes.py
