[project]
name = "synapse"
version = "1.0.0"
description = "Autonomous multi-agent AI system with neural cortex architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
